pkg/front_end/testcases/no_such_method_forwarders/regress_53677.dart.weak.outline.expect
library;
import self as self;
import "dart:core" as core;

mixin class A extends core::Object {
  synthetic constructor •() → self::A
    ;
  method noSuchMethod(core::Invocation inv) → dynamic
    ;
}
abstract class M extends self::A /*isMixinDeclaration*/  {
  abstract method m1(core::int v, [core::String s = "s1"]) → core::String;
  abstract method m2(core::int v, {core::String s = null}) → core::String;
  abstract method m3(core::int v, {required core::String s = null}) → core::String;
  abstract method m4(core::int v, [covariant-by-declaration core::String s = null]) → core::String;
}
class MA = self::A with self::M {
  synthetic constructor •() → self::MA
    : super self::A::•()
    ;
  no-such-method-forwarder method m1(core::int v, [has-declared-initializer core::String s]) → core::String
    return this.{self::A::noSuchMethod}(new core::_InvocationMirror::_withType(#m1, 0, const <core::Type*>[], core::List::unmodifiable<dynamic>(<dynamic>[v, s]), core::Map::unmodifiable<core::Symbol*, dynamic>(const <core::Symbol*, dynamic>{}))){(core::Invocation) → dynamic} as{TypeError,ForDynamic} core::String;
  no-such-method-forwarder method /* signature-type: (core::int, {s: core::String}) → core::String */ m2(core::int v, {core::String? s}) → core::String
    return this.{self::A::noSuchMethod}(new core::_InvocationMirror::_withType(#m2, 0, const <core::Type*>[], core::List::unmodifiable<dynamic>(<dynamic>[v]), core::Map::unmodifiable<core::Symbol*, dynamic>(<core::Symbol*, dynamic>{#s: s}))){(core::Invocation) → dynamic} as{TypeError,ForDynamic} core::String;
  no-such-method-forwarder method m3(core::int v, {required core::String s}) → core::String
    return this.{self::A::noSuchMethod}(new core::_InvocationMirror::_withType(#m3, 0, const <core::Type*>[], core::List::unmodifiable<dynamic>(<dynamic>[v]), core::Map::unmodifiable<core::Symbol*, dynamic>(<core::Symbol*, dynamic>{#s: s}))){(core::Invocation) → dynamic} as{TypeError,ForDynamic} core::String;
  no-such-method-forwarder method m4(core::int v, [covariant-by-declaration core::String s]) → core::String
    return this.{self::A::noSuchMethod}(new core::_InvocationMirror::_withType(#m4, 0, const <core::Type*>[], core::List::unmodifiable<dynamic>(<dynamic>[v, s]), core::Map::unmodifiable<core::Symbol*, dynamic>(const <core::Symbol*, dynamic>{}))){(core::Invocation) → dynamic} as{TypeError,ForDynamic} core::String;
}
static method main() → dynamic
  ;


Extra constant evaluation status:
Evaluated: SymbolLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> SymbolConstant(#m1)
Evaluated: ListLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> ListConstant(const <Type*>[])
Evaluated: MapLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> MapConstant(const <Symbol*, dynamic>{})
Evaluated: SymbolLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> SymbolConstant(#m2)
Evaluated: ListLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> ListConstant(const <Type*>[])
Evaluated: SymbolLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> SymbolConstant(#s)
Evaluated: SymbolLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> SymbolConstant(#m3)
Evaluated: ListLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> ListConstant(const <Type*>[])
Evaluated: SymbolLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> SymbolConstant(#s)
Evaluated: SymbolLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> SymbolConstant(#m4)
Evaluated: ListLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> ListConstant(const <Type*>[])
Evaluated: MapLiteral @ org-dartlang-testcase:///regress_53677.dart:21:7 -> MapConstant(const <Symbol*, dynamic>{})
Extra constant evaluation: evaluated: 50, effectively constant: 12
